style: fixed auth style overlap

--- a/frontend/src/auth.css
+++ b/frontend/src/auth.css
@@ -1,32 +1,28 @@
-body {
+.auth-cont {
   width: 100dvw;
   height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 }
 
-main {
+.auth-cont form {
   display: flex;
   flex-direction: column;
   background-color: var(--overlay2);
   padding: 100px 100px;
   border: 2px solid var(--accent);
   border-radius: 25px;
-  align-items: center;
-}
-
-main form {
-  display: flex;
-  flex-direction: column;
   gap: 20px;
 }
 
-h1 {
+.auth-cont h1 {
   color: var(--accent);
   font-size: 48px;
   margin: 0;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .input-cont {
